# ai-gateway

./: .checkov.yml  .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitleaks.toml  .hadolint.yaml  .terraform-docs.yml  .trivyignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY_INSIGHTS.yml  cliff.toml  codecov.yml  grype-report.txt  lefthook.yml  mise.toml  pyproject.toml  pyrightconfig.json  ruff.toml  sbom-upgrade.cyclonedx.json  tech-stack-report.md  trivy-upgrade.sarif  versions.env  zensical.toml
.github/: CODEOWNERS  SECURITY.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: agentgateway-image-watcher.yml  ci.yml  codeql.yml  dependency-review.yml  docs.yml  portkey-release-scanner.yml  release.yml  rescan-on-advisory.yml  scorecard.yml
adr/: 001-portkey-oss-over-litellm.md  002-python-slim-over-chainguard.md  003-single-nat-gw-with-vpc-endpoints.md  004-security-pipeline-composition.md  005-alb-jwt-validation-over-api-gateway.md  006-portkey-dual-format-api.md  007-terraform-provider-upgrade-for-jwt.md  008-multi-tenant-client-isolation.md  009-provider-routing-strategy.md  010-cost-attribution-pipeline.md  011-bedrock-guardrails-integration.md  012-response-cache-strategy.md  013-identity-center-saml-federation.md  014-two-plane-architecture-split.md  015-openai-responses-bedrock-mantle-proxy.md  016-control-plane-api-foundation.md  017-agentgateway-data-plane-spike.md
clients/admin_cli/: README.md  pyproject.toml
clients/admin_cli/admin_cli/: __init__.py  __main__.py  client.py  commands.py
clients/admin_cli/tests/: test_client.py  test_commands.py
clients/codex/: README.md  config.toml  requirements.toml
docs/: CLAUDE.md  VERSIONING.md  agent-setup.md  astro.config.mjs  devtools-research.md  index.md  infra-stack-research.md  package.json  pnpm-lock.yaml  routing-strategies.md
docs/admin-guide/: deployment.md  environments.md  features.md  index.md  monitoring.md  security.md
docs/developer-guide/: adr-index.md  architecture.md  ci-cd.md  code-quality.md  contributing.md  index.md
docs/getting-started/: authentication.md  index.md  prerequisites.md  quick-start.md
docs/user-guide/: agent-setup.md  api-reference.md  index.md  troubleshooting.md
engineering-docs/: README.md
engineering-docs/architecture/: data-flow.md  module-map.md  system-overview.md
engineering-docs/behavior/: processes.md  state-machines.md
engineering-docs/insights/: business-logic.md  contract-map.md  debugging-guide.md  impact-analysis.md  tech-debt.md
engineering-docs/reference/: cli.md  public-api.md
infrastructure/: .terraform.lock.hcl  .tflint.hcl  README.md  alb.tf  alb_auth.tf  cloudwatch.tf  cognito.tf  dashboard.tf  ecr.tf  ecs.tf  guards.tf  iam.tf  main.tf  moved.tf  otel-config.yaml  outputs.tf  providers.tf  secrets.tf  variables.tf  variables_admin_api.tf  variables_appconfig.tf  variables_audit.tf  variables_auth.tf  variables_budgets.tf  variables_cache.tf  variables_chargeback.tf  variables_clients.tf  variables_content_scanner.tf  variables_cost.tf  variables_guardrails.tf  variables_inspector.tf  variables_routing.tf  versions.tf  vpc.tf  waf.tf
infrastructure/environments/: dev.tfvars  prod.tfvars
infrastructure/portkey-configs/: ab-test-template.json  cost-optimized.json  fallback-anthropic.json  fallback-openai.json  gpt-oss-20b-bedrock.json  gpt-oss-bedrock.json  loadbalance-multi.json  lowest-latency.json
scripts/: bot-push.py  check-health.sh  cw-queries.sh  gateway-setup.sh  get-gateway-token.sh  onboard-client.sh  sso-login.sh
spikes/agentgateway-data-plane/: Dockerfile.mock-adapter  README.md  config.yaml  docker-compose.yaml  mock_adapter.py  webhook-adapter.md
src/admin_token/: __init__.py  handler.py  models.py
src/budget_admin/: __init__.py  audit_query.py  auth.py  handler.py  models.py  routes.py
src/budget_enforcement/: handler.py  jwt_utils.py  models.py
src/chargeback_report/: handler.py  models.py  report_template.py
src/content_scanner/: handler.py  models.py  patterns.py  pii.py
src/cost_attribution/: handler.py  models.py  pricing.py
src/gwcore/: __init__.py  agentgateway.py  audit.py  auth.py  cache.py  errors.py  logging.py  responses.py  telemetry.py  tiers.py
src/pre_token/: handler.py  models.py
src/pricing_admin/: __init__.py  handler.py  models.py
terragrunt/: terragrunt.hcl
tests/: test_admin_token.py  test_agentgateway_contract.py  test_budget_admin.py  test_budget_enforcement.py  test_budget_roundtrip.py  test_chargeback_report.py  test_content_scanner.py  test_cost_attribution.py  test_gwcore.py  test_pre_token.py  test_pricing_admin.py  test_rate_limiter.py  test_routing_config.py  test_team_registration.py  test_usage_api.py
(+163 files in other folders)
