[project]
name = "ai-gateway"
version = "0.1.0"
description = "Lightweight LLM API Gateway — Portkey OSS on ECS Fargate"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.43.27",
    "email-validator>=2.3.0",
    "pydantic>=2.13.4",
]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
    "ruff>=0.15.16",
    "pyright>=1.1.410",
    "boto3-stubs>=1.43.27",
    "hypothesis>=6.155.2",
    "atheris>=3.0.0",
    "pytest-cov>=7.1.0",
    "commitizen>=4.16.3",
    "bandit[sarif]>=1.9.4",
]

[tool.uv]
constraint-dependencies = [
    "pygments>=2.20.0",  # CVE-2026-4539: ReDoS in AdlLexer
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--cov=cost_attribution --cov=pre_token --cov=budget_enforcement --cov=content_scanner --cov=budget_admin --cov=chargeback_report --cov=routing_config --cov=team_registration --cov=rate_limiter --cov=usage_api --cov=pricing_admin --cov-branch --cov-report=term --cov-report=xml"

[tool.coverage.run]
source = ["src"]
branch = true
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 0

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$version"
version_files = [
    "pyproject.toml:version",
]
update_changelog_on_bump = true
