[project]
name = "ai-gateway"
version = "0.1.0"
description = "Lightweight LLM API Gateway — agentgateway on ECS Fargate"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.43.36",
    "email-validator>=2.3.0",
    "pydantic>=2.13.4",
    "pyjwt[crypto]>=2.13.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.20",
    "pyright>=1.1.411",
    "boto3-stubs>=1.43.36",
    "hypothesis>=6.155.7",
    "atheris>=3.1.0",
    "pytest-cov>=7.1.0",
    "commitizen>=4.16.4",
    "bandit[sarif]>=1.9.4",
]

[tool.uv]
constraint-dependencies = [
    "pygments>=2.20.0",  # CVE-2026-4539: ReDoS in AdlLexer
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--cov=cost_attribution --cov=pre_token --cov=budget_enforcement --cov=budget_admin --cov=chargeback_report --cov=routing_config --cov=team_registration --cov=rate_limiter --cov=usage_api --cov=pricing_admin --cov=gwcore --cov=admin_token --cov-branch --cov-report=term --cov-report=xml"

[tool.coverage.run]
source = ["src"]
branch = true
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 0

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$version"
version_files = [
    "pyproject.toml:version",
]
update_changelog_on_bump = true
