[project]
name = "ai-gateway-admin-cli"
version = "0.1.0"
description = "Thin admin CLI for the AI Gateway control plane (Cognito M2M client_credentials)."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cyclopts>=4.20,<5",
    "httpx>=0.28,<1",
]

[project.scripts]
admin-cli = "admin_cli.__main__:app.meta"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["admin_cli"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
